# splineops

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.binder/: requirements.txt
.github/workflows/: deploy-docs.yml  publish-to-pypi.yml  test.yml
bssp/: __init__.py  _version.py
bssp/bases/: bspline0basis.py  bspline1basis.py  bspline2basis.py  bspline3basis.py  bspline4basis.py  bspline5basis.py  bspline6basis.py  bspline7basis.py  bspline8basis.py  bspline9basis.py  keysbasis.py  nearestneighborbasis.py  omoms0basis.py  omoms2basis.py  omoms3basis.py  omoms4basis.py  omoms5basis.py  splinebasis.py  utils.py
bssp/interpolate/: tensorspline.py  utils.py
doc/: Makefile  conf.py  index.rst
doc/_static/css/: custom.css
doc/api/: index.rst
doc/api/core/: index.rst  tensorspline.rst
doc/user-guide/: GPU_Interoperability_Using_Cupy.py  cupy_guide.rst  index.rst  installation.rst
docs/: Makefile  conf.py  index.rst
docs/api/: extensionmode.rst  index.rst  splinebasis.rst  tensorspline.rst
docs/gpu-support/: GPU_Interoperability_Using_Cupy.py  index.rst
docs/sphinxext/: move_gallery_links.py
docs/user-guide/: cupy_guide.rst  index.rst
examples/: 001_first_steps_tensorspline_api.py  002_Plotting_Spline_Bases.py  002_spline_bases.py  003_Extension_Modes.py  003_extension_modes.py  004_2d_image_rotation.py  005_2D_Image_Rotation_Performance.py  005_2d_image_rotation_performance.py  2D_Image_Rotation.py  Extension_Modes.py  First_Steps_Tensorspline_Api.py  Plotting_Spline_Bases.py  README.txt  gpu_interoperability_using_cupy.py  tensorspline_api_call.py
src/bssp/bases/: bspline0basis.py  bspline1basis.py  bspline2basis.py  bspline3basis.py  bspline4basis.py  bspline5basis.py  bspline6basis.py  bspline7basis.py  bspline8basis.py  bspline9basis.py  keysbasis.py  linearbasis.py  nearestneighborbasis.py  omoms1basis.py  omoms2basis.py  omoms3basis.py  omoms4basis.py  omoms5basis.py  splinebasis.py  utils.py
src/bssp/interpolate/: tensorspline.py  utils.py
src/bssp/modes/: extensionmode.py  finitesupportcoefficients.py  narrowmirroring.py  utils.py
src/bssp/utils/: interop.py
src/splineops/: __init__.py
src/splineops/bases/: bspline0basis.py  bspline1basis.py  bspline2basis.py  bspline3basis.py  bspline4basis.py  bspline5basis.py  bspline6basis.py  bspline7basis.py  bspline8basis.py  bspline9basis.py  keysbasis.py  linearbasis.py  nearestneighborbasis.py  omoms0basis.py  omoms1basis.py  omoms2basis.py  omoms3basis.py  omoms4basis.py  omoms5basis.py  splinebasis.py  utils.py
src/splineops/interpolate/: tensorspline.py  utils.py
src/splineops/modes/: extensionmode.py  finitesupportcoefficients.py  narrowmirroring.py  periodicpadding.py  utils.py
src/splineops/utils/: interop.py
tests/: test_interpolation.py
