# https://learn.scientific-python.org/development/guides/packaging-simple/

[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "splineops"
description = "Spline signal processing in N-D with support for GPU computing."
readme = "README.md"
license.file = "LICENSE"
authors = [
    { name = "Dimitris Perdios" },
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "numpy >=1.26",
    "scipy >=1.11",
]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
#    "License :: OSI Approved :: BSD License",  # TODO(dperdios): BSD?
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
urls.download = "https://github.com/splineops/splineops.git"  # TODO(dperdios): make public
#urls.homepage = "https://"  # TODO(dperdios): need a homepage

[project.optional-dependencies]
visualization = [
    "matplotlib >=3.8",
    "pooch >= 1.8",
    "IPython >= 8.26",
]
tests = [
    "tox >=4.13",
    "hatch >=1.9",
    "pytest >=6.0",
]
dev_cupy = [
    "splineops[dev]",
    "black >=23.10",
    "mypy >=1.8",
]
dev = [
    "splineops[visualization]",
    "splineops[tests]",
    "cupy >=12.2",
]
docs = [
    "splineops[visualization]",
    "sphinx >=7.3",
    "sphinx-gallery >=0.17",
    "sphinx-prompt >=1.8",
    "sphinx-copybutton >=0.5",
    "sphinx-remove-toctrees >=1.0",
    "sphinx-design >=0.6",
    "pydata-sphinx-theme >=0.15",
    "myst-parser >= 3.0",
    "jupyterlite-sphinx >= 0.16",
    "jupyterlite-pyodide-kernel >= 0.4",
]

# Hatch tool: dynamic version from git
[tool.hatch.version]
source = "vcs"

# Hatch build
[tool.hatch.build]
exclude = [
    "/docs",
    "/tests",
    "/examples",
]
#include = [
#    "/src",
#]
packages = [
    "src/splineops",
]

# Tests: pytest config
[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = [
  "tests",
]
